# sysinfo

./: Cargo.toml  Dockerfile
scripts/: generate_visuals.py
src/: main.rs
