[package]
name = "sysinfo"
version = "0.1.0"
edition = "2021"
authors = ["cuervo-blanco"]
description = "A Filesystem Report generator"
license = "MIT"
repository = "https://github.com/cuervo-blanco/utilities"

[dependencies]
clap = { version="4.5.20", features=["derive"] }
walkdir = "2.5.0"
serde = { version="1.0.214", features=["derive"] }
serde_json = "1.0.132"
rayon = "1.10.0"
